# facial-emotions-detector

./: pyproject.toml
fer/: __main__.py
fer/emotion_classifier/: train.py
fer/face_detectors/: dlib_hog.py  dnn.py  haar_cascade.py  mt_cnn.py  requirements.txt
