[tool.poetry]
name = "facial_emotion_detector"
version = "0.1.0"
description = ""
authors = ["Patrick de Ângelis <patrick.angelis@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
imutils = "^0.5.4"
opencv-python = "^4.5.2"
dlib = "^19.22.0"
keras = "^2.4.3"
tensorflow = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
